# smart-learner

./: Cargo.toml  README.md  qwerty.sdeck
.github/workflows/: rust.yml
smart-learner-core/: Cargo.toml  readme.md
smart-learner-core/src/: card.rs  date.rs  deck.rs  field.rs  lib.rs  result.rs
smart-learner-gui/: .sdeck  Cargo.toml
smart-learner-gui/src/: main.rs
smart-learner-helper/: Cargo.toml
smart-learner-helper/src/: app.rs  config.rs  data.rs  files.rs  lib.rs
smart-learner-parser/: Cargo.toml
smart-learner-parser/src/: lib.rs  main.rs
