[workspace]
members = ["smart-learner-core", "smart-learner-helper", "smart-learner-gui"]
default-members = ["smart-learner-gui"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["GreatC0der"]
description = "Flashcards application."
repository = "https://github.com/GreatC0der/smart-learner"

[workspace.dependencies]
smart-learner-core = { path = "./smart-learner-core" }
smart-learner-helper = { path = "./smart-learner-helper" }

chrono = "0.4.26"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
eframe = "0.22.0"
egui_file = "0.9.0"
env_logger = "0.10.0"
confy = "0.5.1"
rodio = "0.17.1"