[package]
name = "smart-learner-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_derive.workspace = true