[package]
name = "smart-learner-gui"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
eframe.workspace = true
egui_file.workspace = true
env_logger.workspace = true
smart-learner-core.workspace = true
smart-learner-helper.workspace = true